# bazel-react-webpack-ts

./: .gitignore  LICENSE  README.md  WORKSPACE
frontend/: BUILD.bazel  package.json  tsconfig.base.json  tsconfig.json  webpack.config.js
frontend/bazel/: BUILD.bazel  index.bzl
frontend/public/: index.html
frontend/src/: root.tsx
frontend/src/components/Home/: BUILD.bazel  index.tsx  tsconfig.json
frontend/src/components/Title/: BUILD.bazel  index.tsx  tsconfig.json
frontend/src/types/: BUILD.bazel  styles.d.ts
