load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_project")
load("@npm//webpack-cli:index.bzl", webpack = "webpack_cli")
load("@npm//http-server:index.bzl", dev_server = "http_server")

# Expose those targets as they are required as part of
# other packages builds and need to be included as inputs
exports_files(
  [
    "tsconfig.base.json",
    "package.json"
  ],
  visibility = ["//visibility:public"]
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = ["//frontend:tsconfig.base.json",]
)

ts_project(
    name = "root",
    tsconfig = ":tsconfig",
    supports_workers = True,
    srcs = [
        "src/root.tsx",
    ],
    deps = [
        "@npm//@types",
        "//frontend/src/components/Home",
    ],
)

webpack(
    name = "bundle",
    outs = ["public/dist"],
    args = [
        "./$(locations :root)",
        "--config",
        "./$(execpath webpack.config.js)",
        "--stats-error-details",
        "-o",
        "$@",
    ],
    data = [
        ":root",
        "webpack.config.js",
        "@npm//:node_modules",
    ],
)

filegroup(
    name = "index",
    srcs =[
        "public/index.html"
    ]
)

dev_server(
    name = "server",
    data = [
        ":public/dist",
        ":index"
    ],
    templated_args = ["./frontend/public"],
)