load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_project")
load("@npm//webpack-cli:index.bzl", webpack = "webpack_cli")
load("@npm//http-server:index.bzl", dev_server = "http_server")

ROOT = [
    "//frontend:root",
]

COMPONENTS = [
    "//frontend/src/components/Home",
]

STYLES = [
    "//frontend/src/components/Title:styles.css",
]

# Expose those targets as they are required as part of
# other packages builds and need to be included as inputs
exports_files(
    [
        "types/styles.d.ts",
        "tsconfig.base.json",
        "package.json",
    ],
    visibility = ["//frontend:__subpackages__"],
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = ["//frontend:tsconfig.base.json"],
)

ts_project(
    name = "root",
    srcs = [
        "src/root.tsx",
    ],
    supports_workers = True,
    tsconfig = ":tsconfig",
    deps = COMPONENTS + [
        "@npm//@types",
    ],
)

webpack(
    name = "bundle",
    outs = ["public/dist"],
    args = [
        "./$(locations :root)",
        "--config",
        "./$(execpath webpack.config.js)",
        "-o",
        "$@",
    ],
    data = ROOT +
           STYLES + [
        "webpack.config.js",
        "@npm//:node_modules",
    ],
)

filegroup(
    name = "index",
    srcs = [
        "public/index.html",
    ],
)

dev_server(
    name = "server",
    data = [
        ":index",
        ":public/dist",
    ],
    templated_args = ["./frontend/public"],
)
